Full creating the Service

--- a/src/main/resources/templates/admin/main/new-building/create/create-description.html
+++ b/src/main/resources/templates/admin/main/new-building/create/create-description.html
@@ -70,7 +70,8 @@
         <div class="form-group">
             <div class="new-building-section">
                 <h3>Project Description</h3>
-                <label for="description"></label><textarea id="description" name="description" th:value="${information.description}" placeholder="Enter project description..." rows="5" required></textarea>
+                <label for="description"></label>
+                <textarea id="description" name="description" th:value="${information.description}" placeholder="Enter project description..." rows="5" required></textarea>
             </div>
         </div>
 
