--- a/src/main/resources/templates/admin/main/new-building/create/create-specification.html
+++ b/src/main/resources/templates/admin/main/new-building/create/create-specification.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" th:href="@{/css/admin/main/new-building.css}"/>
     <link rel="stylesheet" th:href="@{/css/util/navigation.css}"/>
+    <link rel="stylesheet" th:href="@{/css/util/tinyMCE.css}"/>
 
     <script src="https://cdn.tiny.cloud/1/hno225mqy4b8nylclzlwyghyq9oblbnzdl8166vswww2d78o/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
