--- a/src/main/resources/static/css/util/forms.css
+++ b/src/main/resources/static/css/util/forms.css
@@ -11,6 +11,29 @@
     width: 100%;
 }
 
+/* Large Textarea Styles */
+.form-group textarea {
+    width: 100%;
+    padding: 15px;
+    border: 1px solid #444;
+    border-radius: 5px;
+    background-color: #2e2e2e;
+    color: #f1f1f1;
+    font-size: 14px;
+    resize: none;
+    margin-top: 20px;
+}
+
+/* Editor block styling */
+.text-editor-block {
+    background-color: #1f1f1f;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+}
+
+
 /* Styles for options within a select element */
 .form-control option {
     background-color: #2e2e2e;
