--- a/src/main/resources/templates/admin/menu.html
+++ b/src/main/resources/templates/admin/menu.html
@@ -34,8 +34,8 @@
                     <span class="opener">Settings</span>
                     <ul class="sub-menu">
                         <li class="menu-item"><a th:href="@{/admin/setting/contacts}">Contacts</a></li>
-                        <li class="menu-item"><a th:href="@{/admin/main/services}">Services</a></li>
-                        <li class="menu-item"><a th:href="@{/admin/setting/about-company}">About company</a></li>
+                        <li class="menu-item"><a th:href="@{/admin/setting/services}">Services</a></li>
+                        <li class="menu-item"><a th:href="@{/admin/setting/company-info/create}">About company</a></li>
                     </ul>
                 </li>
             </ul>
