Added: main, new-building-details, real-estates.

--- a/src/main/resources/templates/admin/main/real-estate/create-real-estate.html
+++ b/src/main/resources/templates/admin/main/real-estate/create-real-estate.html
@@ -82,9 +82,9 @@
             </div>
 
             <div class="form-group">
-                <label for="numStoreys">Number of Floors</label>
-                <input type="number" id="numStoreys" name="numStoreys" class="form-control"
-                       th:value="${realEstateDetails.numStoreys}" required>
+                <label for="storey">Storey</label>
+                <input type="number" id="storey" name="storey" class="form-control"
+                       th:value="${realEstate.storey}" required>
             </div>
 
             <div class="form-group">
