--- a/src/main/resources/templates/admin/main/real-estate/real-estate-details.html
+++ b/src/main/resources/templates/admin/main/real-estate/real-estate-details.html
@@ -76,7 +76,7 @@
                 </tr>
                 <tr class="details-row">
                     <th class="header-green">Number of floors</th>
-                    <td th:text="${realEstate.details.numStoreys}"></td>
+                    <td th:text="${realEstate.storey}"></td>
                 </tr>
                 <tr class="details-row">
                     <th class="header-blue">Year Built</th>
