--- a/src/main/resources/templates/admin/menu.html
+++ b/src/main/resources/templates/admin/menu.html
@@ -16,7 +16,7 @@
         <button class="menu-toggle">☰</button>
         <h1 class="header-title">Admin Panel</h1>
         <div class="header-user">
-            <img th:src="@{/images/avatar.svg}" alt="User Avatar"/>
+            <img th:src="@{/images/svg/avatar.svg}" alt="User Avatar"/>
             <span class="header-user-name">Dmytro Muzychuk</span>
         </div>
     </header>
@@ -24,7 +24,7 @@
     <aside class="sidebar">
         <nav class="menu sidebar-nav">
             <div class="logo-container">
-                <a href="/main"><img class="header-logo" th:src="@{/images/logo.svg}" alt="Royal House Logo"/></a>
+                <a href="/main"><img class="header-logo" th:src="@{/images/svg/logo.svg}" alt="Royal House Logo"/></a>
             </div>
             <ul>
                 <li class="menu-item"><a th:href="@{/admin/main/requests}">Requests</a></li>
