--- a/src/main/resources/templates/admin/main/real-estate/real-estates.html
+++ b/src/main/resources/templates/admin/main/real-estate/real-estates.html
@@ -39,7 +39,7 @@
                 <th>Price per sq.m ($)</th>
                 <th>Rooms</th>
                 <th>Floor</th>
-                <th>Number of floors</th>
+                <th>Storey</th>
                 <th>Date added</th>
                 <th></th>
             </tr>
@@ -85,7 +85,7 @@
                 <td th:text="${realEstate.priceSqM}"></td>
                 <td th:text="${realEstate.details.numRooms}"></td>
                 <td th:text="${realEstate.details.numFloors}"></td>
-                <td th:text="${realEstate.details.numStoreys}"></td>
+                <td th:text="${realEstate.storey}"></td>
                 <td th:text="${#temporals.format(realEstate.date, 'dd.MM.yyyy - HH:mm')}"></td>
                 <td>
                     <div class="btn btn-group">
