--- a/src/main/resources/templates/fragments/favicon.html
+++ b/src/main/resources/templates/fragments/favicon.html
@@ -3,7 +3,7 @@
 <head th:fragment="favicon">
     <meta charset="UTF-8">
     <title>Favicon</title>
-    <link rel="icon" th:href="@{/images/logo.svg}" type="image/x-icon"/>
+    <link rel="icon" th:href="@{/images/svg/logo.svg}" type="image/x-icon"/>
 </head>
 <body>
 </body>
