--- a/src/main/resources/templates/fragments/main-nav-fragment.html
+++ b/src/main/resources/templates/fragments/main-nav-fragment.html
@@ -26,7 +26,7 @@
                 <li class="menu-item"><a th:href="@{/main/real-estates}" th:classappend="${currentURI == '/main/real-estates'} ? 'active' : ''">Real estates</a></li>
                 <li class="menu-item"><a th:href="@{/main/services}" th:classappend="${currentURI == '/main/services'} ? 'active' : ''">Services</a></li>
                 <li class="menu-item"><a th:href="@{/main/company-info}" th:classappend="${currentURI == '/main/company-info'} ? 'active' : ''">About company</a></li>
-                <li class="menu-item"><a th:href="@{/main/request}" th:classappend="${currentURI == '/main/request'} ? 'active' : ''">Leave a request</a></li>
+                <li class="menu-item"><a th:href="@{/main/new-request}" th:classappend="${currentURI == '/main/new-request'} ? 'active' : ''">Leave a request</a></li>
             </ul>
         </nav>
 
