--- a/src/main/resources/templates/user/service-details.html
+++ b/src/main/resources/templates/user/service-details.html
@@ -13,7 +13,7 @@
 <div th:replace="~{fragments/main-nav-fragment :: main-nav}"></div>
 
 <main class="content">
-    <h2 class="section-title" th:text="${service.name}">Service Name</h2>
+    <h2 class="section-title-centre" th:text="${service.name}">Service Name</h2>
 
     <!-- Красиво отформатированное изображение -->
     <div class="service-banner">
