--- a/src/main/resources/templates/user/services.html
+++ b/src/main/resources/templates/user/services.html
@@ -13,7 +13,7 @@
 <div th:replace="~{fragments/main-nav-fragment :: main-nav}"></div>
 
 <main>
-    <h2 class="section-title">Our services</h2>
+    <h2 class="section-title-centre">Our services</h2>
     <div class="service-container" th:each="service : ${services}">
         <div class="service-item">
             <div class="service-image">
