--- a/src/main/resources/static/css/user/service.css
+++ b/src/main/resources/static/css/user/service.css
@@ -123,6 +123,16 @@ footer p {
     margin: 0;
 }
 
+.section-title-centre {
+    font-size: 32px;
+    margin-bottom: 20px;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-align: center;
+    border-bottom: 2px solid #4FC3A1;
+    padding-bottom: 10px;
+}
+
 .service-banner {
     background-color: #111311;
     border: 1px solid #444;
